Fixed get all orders and added statistic api